--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ pandas  # Required for Ray data.
 pyarrow  # Required for Ray data.
 sentencepiece  # Required for LLaMA tokenizer.
 numpy
-torch == 2.0.1
+torch >= 2.0.1
 transformers >= 4.34.0  # Required for Mistral.
 xformers == 0.0.22  # Required for Mistral.
 fastapi
