--- a/requirements-neuron.txt
+++ b/requirements-neuron.txt
@@ -5,5 +5,5 @@ torch-neuronx >= 2.1.0
 neuronx-cc
 fastapi
 uvicorn[standard]
-pydantic >= 2.0  # Required for OpenAI server.
+pydantic
 prometheus_client >= 0.18.0
