--- a/requirements-rocm.txt
+++ b/requirements-rocm.txt
@@ -9,5 +9,5 @@ tokenizers>=0.15.0
 transformers >= 4.38.0  # Required for Gemma.
 fastapi
 uvicorn[standard]
-pydantic >= 2.0  # Required for OpenAI server.
+pydantic
 prometheus_client >= 0.18.0
