--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,9 @@ psutil
 ray >= 2.9
 sentencepiece  # Required for LLaMA tokenizer.
 numpy
-torch == 2.1.2
+torch >= 2.2.1
 transformers >= 4.38.0  # Required for Gemma.
-xformers == 0.0.23.post1  # Required for CUDA 12.1.
+xformers == 0.0.25  # Required for CUDA 12.1.
 fastapi
 uvicorn[standard]
 pydantic
