--- a/requirements-common.txt
+++ b/requirements-common.txt
@@ -10,7 +10,7 @@ tokenizers >= 0.19.1  # Required for Llama 3.
 fastapi
 openai
 uvicorn[standard]
-pydantic
+pydantic==1.10.13
 prometheus_client >= 0.18.0
 prometheus-fastapi-instrumentator >= 7.0.0
 tiktoken == 0.6.0  # Required for DBRX tokenizer
